# MsgCenter

./: .gitignore  CMakeLists.txt  LICENSE  MsgCenter.cpp  MsgCenter.h  MsgChain.cpp  MsgChain.h  README.md  conf.h  main.cpp  msg_center_conf.h  tags
chain/: Chain.cpp  Chain.h  chain_node_t.cpp  chain_node_t.h
